Fixed gap

--- a/client/app/(pages)/profile/styles/reviews.scss
+++ b/client/app/(pages)/profile/styles/reviews.scss
@@ -1,6 +1,7 @@
 @use '../../../styles/globals.scss';
 
 .review-loop{
+    padding-top: 5px;
     .review-item{
         border-bottom-left-radius: 5%;
         border-bottom-right-radius: 5%;
