--- a/client/app/(pages)/profile/styles/statistics.scss
+++ b/client/app/(pages)/profile/styles/statistics.scss
@@ -2,7 +2,7 @@
 
 .statistics-wrapper{
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 table{
     border: 1px solid globals.$secondary-color;
